--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,9 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-9.6
+# resolver: lts-9.6
+resolver: lts-10.4
+# resolver: nightly-2018-01-29
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
